<resources>
    <string name="app_name">On-Beng</string>
    <string name="title">On-Beng</string>
    <!--title-->
    <string name="sub_about">About Me</string>
    <string name="sub_list">List Order</string>
    <string name="sub_search">Search</string>
    <string name="sub_user">User</string>
    <!--activity-->
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <!--form-->
    <string name="btn">Order Now</string>
    <string name="reqIn">Your Order</string>
    <string name="type">Type/ Name</string>
    <string name="noOrder">0</string>
    <string name="fastOrder">Fast Order</string>
    <string name="addrDes">Add description address</string>
    <string name="damage">Descript your damage</string>
    <string name="detailLocation">Add detail location</string>
    <!--detail bengkel-->
    <string name="viewDetail">Detail Bengkel</string>
    <string name="viewDirection">View Direction</string>
    <string name="bengkelName">Name</string>
    <string name="bengkelCompany">Company</string>
    <string name="bengkelContact">Contact</string>
    <string name="bengkelEmail">Email</string>
    <string name="bengkelLocation">Location</string>
    <string name="bengkelLat">Latitude</string>
    <string name="bengkelLng">Langitude</string>
    <!--your-->
    <string name="yourName">Your Name</string>
    <string name="yourUsername">Your Username</string>
    <string name="yourPassword">Your Password</string>
    <string name="yourEmail">Your Email</string>
    <string name="yourContact">Your Phone</string>
    <string name="yourLocation">Your Location</string>
    <string name="yourCoordinate">Your Coordinate</string>
    <string name="yourDefaultCoordinate">(0, 0)</string>
    <string name="yourDamage">Your Damage</string>
    <string name="yourDetail">Your Detail</string>
    <string name="saveProfile">Update Profile</string>
    <string name="detailOrder">Detail Order</string>
    <string name="detailBengkel">Detail Bengkel</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <!--order-->
    <string name="orderDistance">Distance</string>
    <string name="orderPrice">Price per KM</string>
    <string name="orderAmount">Amount</string>
    <!--toast-->
    <string name="pleaseLogout">Please logout and login again</string>
    <string name="orderProcessed">Thank you for order. Data will process.</string>
    <!--change status-->
    <string name="confirm_change_status">Are you sure to cancel this order?</string>
    <string name="title_activity_activity_detail_order">ActivityDetailOrder</string>
</resources>
