<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgtitle"
    android:fillViewport="true"
    android:padding="@dimen/lima"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/normal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person"
            android:hint="@string/yourName"
            android:inputType="textPersonName"
            android:maxLines="1" />
</android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/firstEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/yourEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
</android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/firstPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_visibility_off"
            android:hint="@string/yourPassword"
            android:inputType="textPassword"
            android:maxLines="1" />
</android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/firstContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/yourContact"
            android:inputType="phone"
            android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/firstLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_location_on"
            android:hint="@string/yourLocation"
            android:inputType="text"
            android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourCoordinate"
                android:gravity="center"/>

            <TextView
                android:id="@+id/firstLatLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourDefaultCoordinate"
                android:textColor="@color/colorPrimary"
                android:gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/saveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_default"
            android:text="@string/signup"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>

